# ai-agents

./: .gitignore  READEME.md  README.md  pyproject.toml
agent_01/: README.md
agent_01/agent/: ali_map_mcp.py  cover_mcp_ali2deepseek.py  env-example  main.py  pyproject.toml  reminderModel.py
agent_01/agent-ui/: README.md  angular.json  package-lock.json  package.json
agent_01/agent-ui/src/: index.html
agent_01/agent-ui/src/app/: app.html  app.routes.ts  app.ts
agent_01/agent-ui/src/app/travel-plan/: travel-plan.html  travel-plan.scss  travel-plan.spec.ts  travel-plan.ts
agent_02/: README.md
agent_02/agent/: main.py  meeting_model.py  pyproject.toml
agent_02/agent-ui/: angular.json  package-lock.json  package.json
agent_02/agent-ui/src/: index.html
agent_02/agent-ui/src/app/: app.config.ts  app.routes.ts  app.ts
agent_02/agent-ui/src/app/meeting/: meeting.html  meeting.scss  meeting.ts
agent_02/mcp-server/: main.py  pyproject.toml
agent_03/: README.md  web_files.tmp
agent_03/agent/: main.py  web_gen_model.py  web_modify_model.py
agent_03/agent-ui/: index.html  package-lock.json  package.json
agent_03/agent-ui/src/: App.css  App.tsx
agent_03/agent-ui/src/panel/: Panel.tsx  style.css
agent_03/agent-ui/src/utils/: request.ts
agent_03/mcp-server/: main.py
agent_03/web_files/: index.html  index_template_html  styles.css
agent_04/: README.md
agent_04/agent/: cover_mcp_ali2deepseek.py  main.py
agent_04/data/: index.js
agent_04/mcp-server/: db.py  main.py  pyproject.toml
